# data-collector-hub

./: .gitignore  AGENTS.md  DCP_INTEGRATION.md  MVP_ARCHITECTURE.md  README.md  SQLite-Single-Writer.md  V1_0_FEATURE_LIST.md  V1_0_KNOWN_ISSUES.md  _e2e_test.py  _extract_fields.py  build_offline_zip.py  parallel.md  plan.md  pyproject.toml  run.py  schema-check.sqlite-journal  联调dcp手册.md
api/: server.py
collection/: downloader_client.py  scope_selector.py  sync_orchestrator.py
core/: base_adapter.py  dataset_resolver.py  plugin_config_validator.py  plugin_manager.py  scheduler.py
dashboard/: app.py
doc/: 01-overview.md  02-prd.md  03-architecture.md  04-data-model.md  05-api-spec.md  06-plugin-dev-guide.md  07-operations.md  README.md
health/: __init__.py  dataset_health.py  domain_health.py  job_health.py  summary.py
plugins/: dcp.py  dcp_response_registry.py
processing/: normalizer_runner.py  response_canonical.py
scripts/: README.md  _update_plan_configs.py  acceptance_check.py  analyze_365.py  backup_sqlite.py  beijing_time_acceptance.py  check_7day.py  check_accepted.py  check_dl_jobs.py  check_failed.py  check_failed_365.py  check_fanout.py  check_fanout_debug.py  check_fanout_detail.py  check_fanout_progress.py  check_snapshot.py  check_state.py  check_stuck.py  check_sub50.py  check_sub_fail.py  check_sub_fanout.py  check_year.py  clean_substation.py  diagnose_180day.py  diagnose_180day_v2.py  e2e_query.py  final_acceptance_check.py  final_smoke_wait.py  find_failed.py  full_e2e.py  full_fanout.py  get_field_values.py  health_check.py  (+24 more)
(+124 files in other folders)
